fix(): left nav z-index issue

--- a/src/components/global/PlaygroundTabs/styles.module.css
+++ b/src/components/global/PlaygroundTabs/styles.module.css
@@ -28,6 +28,8 @@
 
 .tabNavItem {
   position: sticky;
+  /* Places the nav item above the tab item  */
+  z-index: 10;
   top: 0;
   right: 0;
   height: 40px;
